Fixed not working horizontal scroll
Enact-DCO-1.0-Signed-off-by: Mikyung Kim (mikyung27.kim@lge.com)

--- a/packages/ui/Scroller/Scroller.module.less
+++ b/packages/ui/Scroller/Scroller.module.less
@@ -9,6 +9,7 @@
 	}
 
 	.content {
+		display: inline-block;
 		overflow: hidden;
 	}
 }
